--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,16 +11,22 @@ book:
 bibliography: references.bib
 csl: https://www.zotero.org/styles/ieee
 format:
-  html:
-    css: styles.css
-    toc: true
+  docx:
+    toc: false
     number-sections: true
+    papersize: a4
+    geometry:
+      - top=25mm
+      - left=35mm
+      - right=25mm
+      - bottom=25mm
     mainfont: "Times New Roman"
     mermaid:
       theme: neutral
-    fig-format: svg
-  pdf:
-    toc: false
+    fontsize: 12pt
+    linestretch: 1.5
+  html:
+    toc: true
     number-sections: true
     papersize: a4
     geometry:
