--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,9 @@ format:
     fontsize: 12pt
     linestretch: 1.5
   pdf:
-    include-before-body: cover.tex
+    include-before-body:
+      - cover.tex
+      - approval.tex
     toc: false
     number-sections: true
     papersize: a4
