docs: Add detailed explanations for mathematical formulas and refine Mermaid diagram styling and structure.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,6 +24,8 @@ format:
     mainfont: "Times New Roman"
     mermaid:
       theme: neutral
+      flowchart:
+        curve: stepBefore
     fontsize: 12pt
     linestretch: 1.5
   pdf:
@@ -41,6 +43,8 @@ format:
     mainfont: "Times New Roman"
     mermaid:
       theme: neutral
+      flowchart:
+        curve: stepBefore
     fontsize: 12pt
     linestretch: 1.5
   docx:
